--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npx ts-node src/server.ts",
+    "dev": "npx ts-node --transpile-only src/server.ts",
     "knex:migrations": "knex  --knexfile knexfile.ts migrate:latest",
     "knex:seeds": "knex --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.10",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
